--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,12 @@
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Recipe book</a>
         </div>
-    <div class="collapse navbar-collapse">
+    <!-- <div class="collapse navbar-collapse"> 
+        Navbar will collapse on smaller screens.
+        Since we didn't implement a Hamburger menu, 
+        that means that there's no way of accessing
+        our links on smaller screens.-->
+        <div class="navbar-default">
         <ul class="nav navbar-nav">
             <li><a href="#">Recipes</a></li>
             <li><a href="#">Shopping list</a></li>
