fix(style): add link styles

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,11 +15,11 @@
             <li><a 
                 [routerLink]="['recipes']" 
                 routerLinkActive="active"
-                (click)="onSelect('recipe')">Recipes</a></li>
+                >Recipes</a></li>
             <li><a 
                 [routerLink]="['shopping-list']" 
                 routerLinkActive="active"
-                (click)="onSelect('shopping-list')">Shopping list</a></li>
+                >Shopping list</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown" appDropdown>
