--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Recipe book</a>
+            <a style="cursor: pointer;"class="navbar-brand">Recipe book</a>
         </div>
     <!-- <div class="collapse navbar-collapse"> 
         Navbar will collapse on smaller screens.
@@ -23,11 +23,11 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown" appDropdown>
-                <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="#">Save data</a>
-                        <a href="#">Fetch data</a>
+                        <a style="cursor: pointer;">Save data</a>
+                        <a style="cursor: pointer;">Fetch data</a>
                     </li>
                 </ul>
             </li>
