--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,13 +3,15 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail 
+    <!-- <app-recipe-detail 
       *ngIf="selectedRecipe; else infoText"
       [recipe]="selectedRecipe"
-      ></app-recipe-detail>
+      ></app-recipe-detail> -->
+      <router-outlet></router-outlet>
+<!--       
       <ng-template #infoText>
         <p>Please select a recipe</p>
-      </ng-template>
+      </ng-template> -->
   </div>
 
 </div>
