--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,7 +21,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><a style="cursor: pointer;" (click)="onAddToShoppingList()">Add ingredients to shopping list</a></li>
-        <li><a style="cursor: pointer;" >Edit Recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
         <li><a style="cursor: pointer;" >Delete Recipe</a></li>
       </ul>
     </div>
