--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -29,7 +29,7 @@
           <button 
             class="btn btn-success" 
             [disabled]="!f.valid" 
-            type="submit">Add</button>
+            type="submit">{{editMode ? 'Update' : 'Add'}}</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
