--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -30,7 +30,7 @@
             class="btn btn-success" 
             [disabled]="!f.valid" 
             type="submit">{{editMode ? 'Update' : 'Add'}}</button>
-          <button class="btn btn-danger" type="button">Delete</button>
+          <button class="btn btn-danger" type="button" (click)="onDelete()" *ngIf="editMode">Delete</button>
           <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
