--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -33,7 +33,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive" alt="">
+          <img [src]="imagePath" class="img-responsive" alt="">
         </div>
       </div>
       <div class="row">
@@ -52,8 +52,9 @@
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
           <div class="row"
-                *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
-                [formGroupName]="i">
+                *ngFor="let ingredientCtrl of getControls(); let i = index"
+                [formGroupName]="i"
+                style="margin-top: 10px">
             <div class="col-xs-8">
                 <input 
                 type="text"
@@ -70,6 +71,15 @@
             </div>
             <div class="col-xs-2">
                 <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button 
+                class="btn btn-success" 
+                (click)="onAddIngredient()"
+                type="button">Add Ingredient</button>
             </div>
           </div>
         </div>
