feat(validation): add user validation

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,10 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
           <div class="col-xs-12">
-            <button type="submit" class="btn btn-success">Save</button>
+            <button 
+              type="submit" 
+              class="btn btn-success"
+              [disabled]="recipeForm.invalid">Save</button>
             <button type="button" class="btn btn-danger">Cancel</button>
           </div>
       </div>
@@ -32,7 +35,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="imagePath">
         <div class="col-xs-12">
           <img [src]="imagePath" class="img-responsive" alt="">
         </div>
