--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -7,7 +7,7 @@
               type="submit" 
               class="btn btn-success"
               [disabled]="recipeForm.invalid">Save</button>
-            <button type="button" class="btn btn-danger">Cancel</button>
+            <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
           </div>
       </div>
       <div class="row">
@@ -62,14 +62,12 @@
             <div class="col-xs-8">
                 <input 
                 type="text"
-                name=""
                 class="form-control"
                 formControlName="name">
             </div>
             <div class="col-xs-2">
                 <input 
                 type="number"
-                name=""
                 class="form-control"
                 formControlName="amount">
             </div>
