featsignup/signin/firebase): create signup authentication

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,9 @@
             <!-- <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
             <li><a href="#" (click)="onSelect('shopping-list')">Shopping list</a></li> -->
             <li><a 
+                routerLink="/signup"
+                routerLinkActive="active">Register</a></li>
+            <li><a 
                 [routerLink]="['recipes']" 
                 routerLinkActive="active"
                 >Recipes</a></li>
