feat(signin): edit sign in component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,6 +16,9 @@
                 routerLink="/signup"
                 routerLinkActive="active">Register</a></li>
             <li><a 
+                routerLink="/signin"
+                routerLinkActive="active">Sign-in</a></li>
+            <li><a 
                 [routerLink]="['recipes']" 
                 routerLinkActive="active"
                 >Recipes</a></li>
