feat(authentication): add methods

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,43 +1,40 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a style="cursor: pointer;"class="navbar-brand">Recipe book</a>
+            <a style="cursor: pointer;" class="navbar-brand">Recipe book</a>
         </div>
-    <!-- <div class="collapse navbar-collapse"> 
+        <!-- <div class="collapse navbar-collapse"> 
         Navbar will collapse on smaller screens.
         Since we didn't implement a Hamburger menu, 
         that means that there's no way of accessing
         our links on smaller screens.-->
-        <div class="navbar-default">
-        <ul class="nav navbar-nav">
-            <!-- <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-            <li><a href="#" (click)="onSelect('shopping-list')">Shopping list</a></li> -->
-            <li><a 
-                routerLink="/signup"
-                routerLinkActive="active">Register</a></li>
-            <li><a 
-                routerLink="/signin"
-                routerLinkActive="active">Sign-in</a></li>
-            <li><a 
-                [routerLink]="['recipes']" 
-                routerLinkActive="active"
-                >Recipes</a></li>
-            <li><a 
-                [routerLink]="['shopping-list']" 
-                routerLinkActive="active"
-                >Shopping list</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown" appDropdown>
-                <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a style="cursor: pointer;" (click)="onSaveData()">Save data</a>
-                        <a style="cursor: pointer;" (click)="onFetchData()">Fetch data</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a [routerLink]="['recipes']" routerLinkActive="active">Recipes</a></li>
+                <li><a [routerLink]="['shopping-list']" routerLinkActive="active">Shopping list</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <!-- using ng-template so we dont wrap it in a div -->
+                <!-- not *ngIf because we want to wrap multiple element in the condition  -->
+                <ng-template [ngIf]="!authService.isAuthenticated()">
+                    <li><a routerLink="/signup" routerLinkActive="active">Register</a></li>
+                    <li><a routerLink="/signin" routerLinkActive="active">Login</a></li>
+                </ng-template>
+            </ul>
+
+
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
+                    <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a style="cursor: pointer;" (click)="onSaveData()">Save data</a>
+                            <a style="cursor: pointer;" (click)="onFetchData()">Fetch data</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
