--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         Since we didn't implement a Hamburger menu, 
         that means that there's no way of accessing
         our links on smaller screens.-->
-        <div class="collapse navbar-collapse">
+        <div class="nav navbar-default">
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['recipes']" routerLinkActive="active">Recipes</a></li>
                 <li><a [routerLink]="['shopping-list']" routerLinkActive="active">Shopping list</a></li>
@@ -17,24 +17,24 @@
             <ul class="nav navbar-nav navbar-right">
                 <!-- using ng-template so we dont wrap it in a div -->
                 <!-- not *ngIf because we want to wrap multiple element in the condition  -->
-                <ng-template [ngIf]="!authService.isAuthenticated()">
-                    <li><a routerLink="/signup" routerLinkActive="active">Register</a></li>
-                    <li><a routerLink="/signin" routerLinkActive="active">Login</a></li>
-                </ng-template>
-            </ul>
+                    <ng-template [ngIf]="!authService.isAuthenticated()">
+                      <li><a routerLink="/signup">Register</a></li>
+                      <li><a routerLink="/signin">Login</a></li>
+                    </ng-template>
+            <li><a
+                style="cursor: pointer;"
+                (click)="onLogout()"
+                *ngIf="authService.isAuthenticated()">Logout</a></li>
 
-
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
+            <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
                     <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a style="cursor: pointer;" (click)="onSaveData()">Save data</a>
-                            <a style="cursor: pointer;" (click)="onFetchData()">Fetch data</a>
-                        </li>
+                      <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
+                      <li><a style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
                     </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          
