--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -17,16 +17,16 @@
             <ul class="nav navbar-nav navbar-right">
                 <!-- using ng-template so we dont wrap it in a div -->
                 <!-- not *ngIf because we want to wrap multiple element in the condition  -->
-                    <ng-template [ngIf]="!authService.isAuthenticated()">
+                    <ng-template [ngIf]="!isAuthenticated()">
                       <li><a routerLink="/signup">Register</a></li>
                       <li><a routerLink="/signin">Login</a></li>
                     </ng-template>
             <li><a
                 style="cursor: pointer;"
                 (click)="onLogout()"
-                *ngIf="authService.isAuthenticated()">Logout</a></li>
+                *ngIf="isAuthenticated()">Logout</a></li>
 
-            <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
+            <li class="dropdown" appDropdown *ngIf="isAuthenticated()">
                     <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
